<resources>
    <string name="app_name">KotlinFragment</string>
    <string name="action_settings">Settings</string>
    <string name="simple_fragment">Simple Fragment</string>
    <string name="list_fragment">List Fragment</string>
    <string name="page_fragment">Page Fragment</string>
    <string name="click_below_to_get_dialog_fragment">Click Below To Get Dialog Fragment</string>
    <string name="click_here">Click Here</string>
    <string name="you_clicked_the_button">You clicked the button.</string>
    <string name="ok">OK</string>
    <string name="click_to_see_list">Click to see list</string>

    <string name="list_txt_hint">Enter Name</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="pager_activity">Pager view</string>
</resources>
