<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/listBtnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/listEditTxt"
        app:layout_constraintTop_toBottomOf="@+id/listEditTxt" />

    <EditText
        android:id="@+id/listEditTxt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/list_txt_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/listBtnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listBtnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="41dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/listBtnOK"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>